--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@aws-cdk/core": "1.108.1",
+    "@cdk-turnkey/stackname": "^1.2.0",
+    "aws-sdk": "^2.927.0",
     "source-map-support": "^0.5.16"
   }
 }
