Add an API Gateway with a handler
gh-1

I want to see if the code within this function is sufficient for it to
even be called. Then I can work on making sure it gets invoked when a
WebSocket connection happens to the as-yet-uncreated WebSockets API
Gateway.

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-apigateway": "^1.108.1",
+    "@aws-cdk/aws-lambda": "^1.108.1",
     "@aws-cdk/core": "1.108.1",
     "@cdk-turnkey/stackname": "^1.2.0",
     "aws-sdk": "^2.927.0",
