--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,15 +32,10 @@ jobs:
         run: |
           npm install
 
-      - name: Install backend
-        working-directory: backend
+      - name: Install backend/connect
+        working-directory: backend/connect
         run: |
           npm install
-
-      - name: Test backend
-        working-directory: backend
-        run: |
-          npm test
 
       - name: Build
         run: |
@@ -86,11 +81,6 @@ jobs:
           AWS_DEFAULT_REGION: "us-east-1"
         run: |
           bash scripts/deploy-frontend.sh
-
-      - name: Install itest
-        working-directory: itest
-        run: |
-          npm install
 
       - name: Run integration tests, test account
         working-directory: scripts
