--- a/package.json
+++ b/package.json
@@ -27,7 +27,12 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.108.1",
+    "@aws-cdk/aws-certificatemanager": "^1.108.1",
+    "@aws-cdk/aws-cloudfront": "^1.108.1",
+    "@aws-cdk/aws-cloudfront-origins": "^1.108.1",
     "@aws-cdk/aws-lambda": "^1.108.1",
+    "@aws-cdk/aws-route53": "^1.108.1",
+    "@aws-cdk/aws-s3": "^1.108.1",
     "@aws-cdk/core": "1.108.1",
     "@cdk-turnkey/stackname": "^1.2.0",
     "aws-sdk": "^2.927.0",
