--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Test
         run: |
-          npm test
+          npm run test -- test
 
       - name: Identify test account and region
         env:
