--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.108.1",
+    "@aws-cdk/aws-apigatewayv2": "^1.108.1",
+    "@aws-cdk/aws-apigatewayv2-integrations": "^1.108.1",
     "@aws-cdk/aws-certificatemanager": "^1.108.1",
     "@aws-cdk/aws-cloudfront": "^1.108.1",
     "@aws-cdk/aws-cloudfront-origins": "^1.108.1",
