--- a/.github/workflows/feature-branch.yml
+++ b/.github/workflows/feature-branch.yml
@@ -32,15 +32,10 @@ jobs:
         run: |
           npm install
 
-      - name: Install backend
-        working-directory: backend
+      - name: Install backend/connect
+        working-directory: backend/connect
         run: |
           npm install
-
-      - name: Test backend
-        working-directory: backend
-        run: |
-          npm test
 
       - name: Build
         run: |
@@ -58,7 +53,7 @@ jobs:
 
       - name: Test
         run: |
-          npm test
+          npm run test -- test
 
       - name: Identify dev account and region
         env:
@@ -69,7 +64,7 @@ jobs:
           aws sts get-caller-identity
           echo ${AWS_DEFAULT_REGION} | sed 's/-/+/g'
 
-      - name: Deploy the webapp stack to dev account
+      - name: Deploy the webapp stack to the dev account
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
@@ -86,18 +81,3 @@ jobs:
           AWS_DEFAULT_REGION: "us-east-1"
         run: |
           bash scripts/deploy-frontend.sh
-
-      - name: Install itest
-        working-directory: itest
-        run: |
-          npm install
-
-      - name: Run integration tests (dev account)
-        working-directory: scripts
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.DEV_AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.DEV_AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: "us-east-1"
-          AWS_REGION: "us-east-1"
-        run: |
-          bash itest.sh
